Fixed issue with card content overflowing

--- a/src/components/MyReviews/MyReviews.scss
+++ b/src/components/MyReviews/MyReviews.scss
@@ -31,6 +31,7 @@
 /* Styles the top rated content panel. Note: hidden by default */
 .my-reviews-content {
   overflow-y: scroll;
+  overflow-x: hidden;
   transition: max-height 0.6s ease;
   height: 45vh;
 }
@@ -97,7 +98,7 @@ ul {
   box-sizing: border-box;
   height: auto;
   width: 252px;
-  padding: 7px 0px 7px 25px;
+  padding: 7px 25px;
   margin: 10px;
 }
 
